--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Dasola Team</title>
+<title>Desmond Team</title>
 <style>
     body{
         background: #000;
@@ -54,9 +54,9 @@
 </head>
 <body>
     <div id="message">
-        <h2>Dasola Team</h2>
+        <h2>Desmond</h2>
         <p>Hello there, how are you doing? Hope you're doing good. <br>
-            This is an Important messeage from Dasola Team...<br>
+            This is an Important messeage from Desmond...<br>
         Kindly click the button below to see</p>
 
         <button class="btn" onclick="myFunction()">Click here</button>
@@ -64,8 +64,8 @@
         <div id="myDIV">
         <h3>We're Glad you clicked on the button</h3>
             <p>We would like you to reachout to us on telegram or whatsappp,
-            <br>for better communication because there're some words that fiverr didn't<br> allow on their marketplace so we would be happy if you can contact us on<br> whatsapp for safety of our account...</p>
-            <p>Here is our whatsapp : <b>+2347031451719</b></p>
+            <br>for better communication because there're some words that fiverr didn't<br> allow on their marketplace so we would be happy if you can contact us on<br> telegram for safety of our account...</p>
+            <p>Here is our Telegram link : <a href="https://t.me/desmond_joe">Telegram</a></p>
             <span>Thanks for your understanding!!</span>
             <hr>
             <a><i class="fa fa-whatsapp" style="font-size: 30px; color: green;"></i></a>
